reports/bs4-basics.log
Traceback (most recent call last):
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/asyncio/base_events.py", line 650, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/contextlib.py", line 222, in __aexit__
    await self.gen.athrow(typ, value, traceback)
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/site-packages/nbclient/client.py", line 608, in async_setup_kernel
    yield
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/rjbc76/mambaforge/envs/webscraping-for-humanities/lib/python3.11/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
soup.find_all('p', class='small')
------------------

[0;36m  Cell [0;32mIn[19], line 1[0;36m[0m
[0;31m    soup.find_all('p', class='small')[0m
[0m                       ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3488578580.py, line 1)

